<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Receipt</string>
    <string name="HistoryTabLabel">History</string>
    <string name="StatsTabLabel">Stats</string>
    <string name="BreakdownTabLabel">Breakdown</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_history">History</string>
    <string name="MenuEditDashboard">Edit Balance</string>
    <string name="NewList">New List</string>
    <string name="menu_discard">Discard List</string>
    <string name="menu_help">Help</string>
    <string name="DiscardConfirmation">Delete this list?</string>
    <string name="DiscardOK">Delete</string>
    <string name="menu_checkout">Checkout</string>
    <string name="UndoCheckoutHint">Undo Checkout</string>
    <string name="MenuBackend">Open Lists</string>
    <string name="MenuBackendMultiple">%1$d Open Lists</string>
    <string name="MenuBackendSingle">1 Open List</string>
    <string name="MenuShare">Share</string>
    <string name="ShareHint">Share</string>
    <string name="menu_clear_history">Clear History</string>
    <string name="total">Total</string>
    <string name="EstimatedTotal">Est. Total</string>
    <string name="budget">Budget</string>
    <string name="BudgetUnlimited">Unlimited</string>
    <string name="ReservedBudget">Limit</string>
    <string name="SetBudget">Set Budget</string>
    <string name="ClearBudget">Clear Budget</string>
    <string name="BudgetDisplay">Budget: %1$s</string>
    <string name="RemainingBudgetDisplay">Remaining: %1$s</string>
    <string name="SubtotalDisplay">Subtotal: %1$s</string>
    <string name="TaxDisplay">Tax: %1$s%%</string>
    <string name="SetTax">Set Tax</string>
    <string name="Tax">Tax</string>
    <string name="TaxNone">No Tax</string>
    <string name="RecurrenceTitle">Update</string>
    <string name="SearchTags">Search or create</string>
    <string name="SearchTagsReadonly">Search tags</string>
    <string name="SearchTagsWriteonly">Create tag</string>
    <string name="AddTag">Add Tag</string>
    <string name="NewTag">New Tag</string>
    <string name="ClearTags">Delete All Tags</string>
    <string name="UncommonTags">Distinct Tags</string>
    <string name="CreateTag">Create Tag: %1$s</string>
    <string name="TagHeaderHue">Hue</string>
    <string name="TagHeaderBrightness">Brightness</string>
    <string name="ConfirmTagDelete">Delete?</string>
    <string name="TagNameHint">Name</string>
    <string name="Red">Red</string>
    <string name="Yellow">Yellow</string>
    <string name="Green">Green</string>
    <string name="Blue">Blue</string>
    <string name="Purple">Purple</string>
    <string name="Gray">Gray</string>
    <string name="Today">Today</string>
    <string name="ThisWeek">This Week</string>
    <string name="BackendScrapHeader">%1$d left</string>
    <string name="SourceExternal">Open Files</string>
    <string name="SourceLibrary">Lists</string>
    <string name="SourceLibraryText">%1$d Lists</string>
    <string name="SourceLibrarySingleText">1 List</string>
    <string name="Balance">Balance</string>
    <string name="Remaining">Remaining</string>
    <string name="Debt">Debt</string>
    <string name="Reset">Reset</string>
    <string name="Budget">Budget</string>
    <string name="Spent">Spent</string>
    <string name="AddBalanceHint">Add to Balance</string>
    <string name="ResetDate">Reset date</string>
    <string name="ResetTypeManually">Don\'t reset</string>
    <string name="ResetDisplay">On the %1$d%2$s</string>
    <string name="SuffixST">st</string>
    <string name="SuffixND">nd</string>
    <string name="SuffixRD">rd</string>
    <string name="SuffixTH">th</string>
    <string name="ResetTypeMonthly">Monthly</string>
    <string name="MonthlyTypeOnDate">On date</string>
    <string name="MonthlyTypeOnFirst">On first</string>
    <string name="MonthlyTypeOnLast">On last</string>
    <string name="WeekdayTypeFirst">First %1$s</string>
    <string name="WeekdayTypeLast">Last %1$s</string>
    <string name="ResetTypeTwicePerMonth">Twice Per Month</string>
    <string name="ResetTypeWeekly">Weekly</string>
    <string name="WeeklyTypePrefix">Every</string>
    <string name="ResetFieldHint">Don\'t reset</string>
    <string name="AddButtonLabel">Add</string>
    <string name="NextButtonLabel">Next</string>
    <string name="DoneButtonLabel">Done</string>
    <string name="CanCheckoutTitle">Complete</string>
    <string name="ItemsLeftTitle">%1$d left to buy</string>
    <string name="NewListTitle">New List</string>
    <string name="BudgetExceededTitle">Over budget</string>
    <string name="CanCheckoutMini">Complete</string>
    <string name="ItemsLeftMini">%1$d left</string>
    <string name="NewListMini">New List</string>
    <string name="BudgetExceededMini">Over Budget</string>
    <string name="LoadingTitle"></string>
    <string name="TitleEditHint">Name</string>
    <string name="QtyEditHint">Qty</string>
    <string name="PriceEditHint">Price</string>
    <string name="MeasurementUnit">Unit</string>
    <string name="Count">x</string>
    <string name="Gram">g</string>
    <string name="Kilogram">kg</string>
    <string name="Litre">l</string>
    <string name="Ounce">oz</string>
    <string name="Pound">lb</string>
    <string name="DragToAdd">Drag to add item</string>
    <string name="ReleaseToAdd">Release to add item</string>
    <string name="ItemInputHint">When you set the price, the item will be crossed off.</string>
    <string name="ItemDelete">Delete</string>
    <string name="ItemCut">Cut</string>
    <string name="ItemCopy">Copy</string>
    <string name="ItemRename">Rename</string>
    <string name="ItemEditTags">Edit Tags</string>
    <string name="ItemCrossOff">Cross Off</string>
    <string name="SelectAll">Select All</string>
    <string name="ItemReadd">Re-add</string>
    <string name="AddButtonHint">Add Item</string>
    <string name="none"></string>
    <string name="title_activity_history">History</string>
    <string name="ItemsInClipboard">Clipboard</string>
    <string name="PasteAll">Paste All</string>
    <string name="PasteSelection">Paste Selection</string>
    <string name="PasteHint">Paste</string>
    <string name="PasteHintDescriptionSingle">1 item in clipboard</string>
    <string name="PasteHintDescriptionMultiple">%1$d items in clipboard</string>
    <string name="PasteLabel"></string>
    <string name="ClearClipboard">Clear Clipboard</string>
    <string name="ScrapDate2">%1$s %2$d</string>
    <string name="ScrapItems">%1$d Items</string>
    <string name="ScrapPrice">%1$s%2$d</string>
    <string name="ScrapCheckedOut">Checked Out</string>
    <string name="ScrapDate">Date</string>
    <string name="HeaderThisYear">This Year</string>
    <string name="HeaderThisQuarter">This Quarter</string>
    <string name="HeaderThisMonth">This Month</string>
    <string name="HeaderThisWeek">This Week</string>
    <string name="StatsStackModeTooltip">Tag Stacking Mode</string>
    <string name="StatsStackModeOverlay">Overlaid</string>
    <string name="StatsStackModeStacked">Stacked</string>
    <string name="OverlayTagsTooltip">Tags in Graph</string>
    <string name="OverlayTagsTooltipNoTags">No tags</string>
    <string name="CancelTask">Cancel %1$s</string>
    <string name="TaskClearHistory">Clear History</string>
    <string name="TaskDeleteItem">Delete Item</string>
    <string name="ContinuousTask" tools:ignore="TypographyEllipsis">%1$s...</string>
    <string name="TaskLoad">Loading</string>
    <string name="TaskSearch">Searching</string>
    <string name="Average">Average</string>
    <string name="Total">Total</string>
    <string name="QuarterDisplayMini">Q%1$d</string>
    <string name="QuarterDisplayCompact">Q%1$d %2$d</string>
    <string name="QuarterDisplayCurrent">Quarter %1$d</string>
    <string name="QuarterDisplayFormer">Quarter %1$d, %2$d</string>
    <string name="AddItem">Add Item</string>
    <string name="CommonlyUsedItems">Used often</string>
    <string name="AddAll">Add All</string>
	<string name="PriceStats">Total Price</string>
	<string name="CountStats">Total Receipts</string>
	<string name="Yearly">Year</string>
    <string name="Quarterly">Quarter</string>
	<string name="Monthly">Month</string>
	<string name="Weekly">Week</string>
    <string name="YearlyDisplay">Yearly stats</string>
    <string name="QuarterlyDisplay">Quarterly stats</string>
    <string name="MonthlyDisplay">Monthly stats</string>
	<string name="Weekday">Weekday</string>
	<string name="HourOfDay">Hour of Day</string>
	<string name="GrouperTitle">Display Options</string>
	<string name="GrouperTypePreLabel"></string>
	<string name="GrouperTypePostLabel">by</string>
    <string name="SelectionTitle"> %1$d selected</string>
	<string name="ConfirmScrapTitle">Delete this receipt?</string>
	<string name="ConfirmWholeHistory">Clear history?</string>
	<string name="ConfirmSelection">Delete selection?</string>
    <string name="ConfirmSelectionMultiple">Delete %1$d lists?</string>
    <string name="ConfirmSelectionSingle">Delete %1$d list?</string>
    <string name="OKButtonLabel">OK</string>
    <string name="CancelButtonLabel">Cancel</string>
    <string name="ActionDelete">Delete</string>
	<string name="CheckoutDate">Date</string>
	<string name="CheckoutTime">Time</string>
	<string name="ItemCount">Items</string>
	<string name="TotalItemCount">Total items</string>
	<string name="BudgetAssigned">Limit</string>
	<string name="BudgetRemaining">Remaining</string>
	<string name="Subtotal">Subtotal</string>
    <string name="ActionModeDone"></string>
    <string name="AddToList"></string>
    <string name="AddToListHint">Copy</string>
    <string name="DeleteHint">Delete</string>
	<string name="Search">Search history</string>
	<string name="NoResults">Nothing Found</string>
	<string name="NoHistory">No Items</string>
	<string name="GrouperMenu">Display Options</string>
	<string name="SearchMenu">Search</string>
    <string name="BreakdownMenu">Break Down</string>
	<string name="SetDefault">Save</string>
	<string name="HintTitle">No Items</string>
	<string name="HintDescription">Tap the + icon to add some</string>
    <string name="Welcome">Welcome</string>
    <string name="SetUpBudget">Set up budget</string>
    <string name="SetUpDone">Done</string>
    <string name="SetUpSkip">Skip</string>
    <string name="Details">Details</string>
    <string name="ShowDetails">Show Details</string>
    <string name="ShowItems">Show Items</string>
    <string name="MakeActive">Copy All</string>
    <string name="FileErrorTitle">Couldn\'t open file</string>
    <string name="FileErrorDescription">Couldn\'t open this file because %1$s.</string>
    <string name="ErrorUnknownFile">it is not a receipt</string>
    <string name="ErrorIOException">an error has occurred</string>
    <string name="ErrorEarlyEOF">it is incomplete</string>
	<string name="ReorderSetting">Reorder crossed-off items</string>
	<string name="ReorderYes">Crossed-off items moved to bottom</string>
	<string name="ReorderNo">Crossed-off items aren\'t reordered</string>
    <string name="ShakeToSortSetting">Shake to sort</string>
	<string name="BudgetSetting">Budget exceeded alarm</string>
	<string name="AutoCrossOffSetting">Cross-off items with prices</string>
	<string name="AutoCrossOffYes">Items are crossed-off when setting their price</string>
	<string name="AutoCrossOffNo">Items are not crossed-off when setting their price</string>
	<string name="CurrencyHeader">CURRENCY</string>
    <string name="DevTitle">Super Secret\nDeveloper Console</string>
    <string name="SuperSecretLine1">You have reached the\u0020</string>
    <string name="SuperSecretLine2">Super Secret Developer Console.</string>
    <string name="SuperSecretLine3Pre">Press\u0020</string>
    <string name="SuperSecretLine3Mid">any key</string>
    <string name="SuperSecretLine3Post">\u0020to continue</string>
</resources>