<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <!--  
    <Preference
		android:key="selectedAccountPreference"
		android:title="Sync Account"
		/>   
		-->

    <!--<Preference-->
		<!--android:key="editTags"-->
		<!--android:title="Edit tags"-->
		<!--/>-->

    <CheckBoxPreference
		android:key="autoReorder"
		android:title="@string/ReorderSetting"
		android:summaryOn="@string/ReorderYes"
		android:summaryOff="@string/ReorderNo"
		android:defaultValue="true"
		/>

    <CheckBoxPreference
        android:key="shakeToSort"
        android:title="@string/ShakeToSortSetting"
        android:defaultValue="true"
        />

    <CheckBoxPreference
		android:key="playExceededAlert"
		android:title="@string/BudgetSetting"
		android:defaultValue="false"
		/>   
    
    <CheckBoxPreference
		android:key="autoCross"
		android:title="@string/AutoCrossOffSetting"
		android:summaryOn="@string/AutoCrossOffYes"
		android:summaryOff="@string/AutoCrossOffNo"
		android:defaultValue="true"
		/>     
    
    <!-- 
    <CheckBoxPreference
		android:key="showNotification"
		android:title="@string/NotificationSetting"
		android:summaryOn="@string/NotificationYes"
		android:summaryOff="@string/NotificationNo"
		android:defaultValue="true"
		/> 
		-->
    
    <!--<CheckBoxPreference-->
		<!--android:key="continuousClipboard"-->
		<!--android:title="@string/AddToClipboardSetting"-->
		<!--android:summaryOn="@string/AddToClipboardYes"-->
		<!--android:summaryOff="@string/AddToClipboardNo"-->
		<!--android:defaultValue="true"-->
		<!--/> -->
			
    <PreferenceCategory
        android:title="@string/CurrencyHeader"
        android:key="miscPrefs"> 
		
	    <CheckBoxPreference
			android:key="useCurrencySymbol"
			android:title="Show currency symbol"
			android:defaultValue="true"
			/>        
	    
	    <ListPreference 
	        android:dependency="useCurrencySymbol"
	        android:key="currencySymbol"
	        android:title="Currency symbol"
	        android:dialogTitle="Currency Symbol"/>
    
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="ABOUT"
        android:key="about">
        
	    <Preference
			android:key="versionInfo"
			style="?android:preferenceInformationStyle"
			android:title="Version"
			android:summary="1.2"
			/>    
        
	    <Preference
			android:key="copyrightInfo"
			style="?android:preferenceInformationStyle"
			android:title="©2013-2014 Mihaiciuc Bogdan"
			/>      
		
    </PreferenceCategory>
    

</PreferenceScreen>