<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
	<item android:id="@+id/action_cut"
          android:icon="@drawable/ic_action_cut"
          android:title="@string/ItemCut"
          android:showAsAction="ifRoom|withText" />
    
	<item android:id="@+id/action_copy"
          android:icon="@drawable/ic_action_copy"
          android:title="@string/ItemCopy"
          android:showAsAction="ifRoom|withText" />
    
	<item android:id="@+id/action_delete"
          android:icon="@drawable/ic_action_delete"
          android:title="@string/ItemDelete"
          android:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_edit_tags"
        android:showAsAction="ifRoom"
        android:visible="false"
        android:icon="@drawable/ic_cross_off"
        android:title="@string/ItemCrossOff" />
    
</menu>