<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/menu_start_working"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:visible="false"
        android:title="[DEV] Start Working!"/>
    
    <item
        android:id="@+id/menu_stop_working"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:visible="false"
        android:title="[DEV] Stop Working!"/>
    
    <item
        android:id="@+id/menu_show_stats"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:visible="false"
        android:title="[DEV] Reload stats!"/>
    
    <item
        android:id="@+id/menu_update"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:visible="false"
        android:title="[DEV] Test update stats!"/>
    
    <item
        android:id="@+id/menu_toggle_stats"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:visible="false"
        android:title="[DEV] Toggle stats!"/>

    <item
        android:id="@+id/menu_clear_history"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/menu_clear_history"/>
    
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    
    <item
        android:id="@+id/menu_help"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/menu_help"/>

</menu>