<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/DashboardBackground"
             android:clipChildren="false" >

    <View
        android:id="@+id/WelcomeClickBlocker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true" />

    <!-- Phase 1 - Welcome -->

    <TextView
        android:id="@+id/WelcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="64dp"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/DashboardText"
        android:textSize="64sp"
        android:text="@string/Welcome"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:maxLines="1"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal" />

    <ImageView
        android:id="@+id/WelcomeLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="128dp"
        android:src="@drawable/logo_dark"
        tools:ignore="ContentDescription" />

    <!-- Phase 2 - Setup -->

    <TextView
        android:id="@+id/SetupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="160dp"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/DashboardTitle"
        android:textSize="@dimen/SecondaryTextSize"
        android:text="@string/SetUpBudget"
        android:visibility="invisible" />

    <FrameLayout
        android:id="@+id/SetupContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="128dp"
        android:visibility="invisible">

        <include layout="@layout/dashboard_editor"/>

    </FrameLayout>

    <View
        android:id="@+id/SetupSeparator"
        android:background="@color/separator_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="?android:attr/actionBarSize"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/SetupButtonStrip"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_gravity="bottom"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/SkipSetup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/SetUpSkip"
            android:contentDescription="@string/none"
            style="?android:attr/borderlessButtonStyle" />

        <View
            android:background="@color/separator_gray"
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/FinishSetup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/SetUpDone"
            android:contentDescription="@string/none"
            style="?android:attr/borderlessButtonStyle" />

    </LinearLayout>

</FrameLayout>