<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/ActionBar"
             android:clipChildren="false" >

    <View
        android:id="@+id/WelcomeClickBlocker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true" />

    <!-- Phase 1 - Welcome -->

    <ImageView
        android:id="@+id/WelcomeLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="64dp"
        android:src="@drawable/logo"
        tools:ignore="ContentDescription" />

    <!-- Phase 2 - Passkey -->

    <TextView
        android:id="@+id/ConsoleLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/EdgePadding"
        android:layout_marginTop="160dp"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/SuperSecretLine1"
        android:maxLines="1"
        android:singleLine="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:ellipsize="none"
        android:fadingEdge="horizontal"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/ConsoleLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/EdgePadding"
        android:layout_marginTop="192dp"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/SuperSecretLine2"
        android:maxLines="1"
        android:singleLine="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:ellipsize="none"
        android:fadingEdge="horizontal"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/ConsoleLine3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/EdgePadding"
        android:layout_marginTop="262dp" >

        <TextView
            android:id="@+id/ConsoleLine3Pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="monospace"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/SuperSecretLine3Pre"
            android:maxLines="1"
            android:singleLine="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:ellipsize="none"
            android:fadingEdge="horizontal"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/ConsoleLine3Mid"
            style="?android:attr/borderlessButtonStyle"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical|left"
            android:fontFamily="monospace"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/SuperSecretLine3Mid"
            android:maxLines="1"
            android:singleLine="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:ellipsize="none"
            android:fadingEdge="horizontal"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/ConsoleLine3Post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="monospace"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/SuperSecretLine3Post"
            android:maxLines="1"
            android:singleLine="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:ellipsize="none"
            android:fadingEdge="horizontal"
            android:visibility="invisible" />

        <View
            android:id="@+id/Cursor"
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:background="@color/white"
            android:visibility="invisible" />

    </LinearLayout>

    <TextView
        android:id="@+id/ConsoleLine8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/EdgePadding"
        android:layout_marginTop="192dp"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:maxLines="1"
        android:singleLine="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:ellipsize="none"
        android:fadingEdge="horizontal"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/ConsoleLine9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/EdgePadding"
        android:layout_marginTop="192dp"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:maxLines="1"
        android:singleLine="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:ellipsize="none"
        android:fadingEdge="horizontal"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/SetupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="160dp"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/white"
        android:textSize="@dimen/SecondaryTextSize"
        android:text="@string/DevTitle"
        android:visibility="invisible" />

    <FrameLayout
        android:id="@+id/SetupContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="128dp"
        android:visibility="invisible">

        <include layout="@layout/dashboard_editor"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/ConsoleContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|bottom"
        android:visibility="invisible">

    </FrameLayout>

    <View
        android:id="@+id/SetupSeparator"
        android:background="@color/SuperSecretDeveloperConsoleLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="?android:attr/actionBarSize"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/SetupButtonStrip"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_gravity="bottom"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/SkipSetup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/SetUpSkip"
            android:textColor="@android:color/white"
            android:contentDescription="@string/none"
            style="?android:attr/borderlessButtonStyle" />

        <View
            android:background="@color/SuperSecretDeveloperConsoleLine"
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/FinishSetup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/SetUpDone"
            android:textColor="@android:color/white"
            android:contentDescription="@string/none"
            style="?android:attr/borderlessButtonStyle" />

    </LinearLayout>

</FrameLayout>